tests/positive/basic/array_insert_bool/input.ci
void main() {
    bool[] xs = [true, true];
    arrayInsert(xs, 1, false);
    print(toString(xs[0]) + "," + toString(xs[1]) + "," + toString(xs[2]) + "\n");
}
