tests/negative/runtime/arrayinsert_negative_index/input.ci
void main() {
    int[] xs = [1];
    arrayInsert(xs, -1, 9);
}
